force-app/main/default/objects/Office__c/Office__c.object-meta.xml
<CustomObject>
    <description>The offices that come under XYZ inc.</description>
    <label>Office</label>
    <nameField>
        <label>Office  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>