force-app/main/default/objects/Office__c/fields/isActive__c.field-meta.xml
<CustomField>
    <fullName>isActive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isActive</label>
    <type>Checkbox</type>
</CustomField>