force-app/main/default/objects/Office__c/fields/Office_Location__c.field-meta.xml
<CustomField>
    <fullName>Office_Location__c</fullName>
    <label>Office Location</label>
    <referenceTo>Office_Location__c</referenceTo>
    <relationshipLabel>Offices</relationshipLabel>
    <relationshipName>Offices</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>